[gd_scene load_steps=12 format=3 uid="uid://b15bsg5jtpvqm"]

[ext_resource type="Script" uid="uid://qw844c1smxdu" path="res://Scripts/Interactive_Enviorment/spikes.gd" id="1_c8smu"]
[ext_resource type="Texture2D" uid="uid://dtvesve1g201a" path="res://assets/Sprites/Interactive_Enviorment/floor spikes/keyframes/small_wood/small_wood_spike_01.png" id="1_r4go5"]
[ext_resource type="Texture2D" uid="uid://cor3eqskdm0vt" path="res://assets/Sprites/Interactive_Enviorment/floor spikes/keyframes/small_wood/small_wood_spike_02.png" id="2_c8smu"]
[ext_resource type="Texture2D" uid="uid://dllpwrtvw0ofi" path="res://assets/Sprites/Interactive_Enviorment/floor spikes/keyframes/small_wood/small_wood_spike_03.png" id="3_dionp"]
[ext_resource type="Texture2D" uid="uid://u7ugjandsn5s" path="res://assets/Sprites/Interactive_Enviorment/floor spikes/keyframes/small_wood/small_wood_spike_04.png" id="4_qmw5a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0mssf"]
atlas = ExtResource("1_r4go5")
region = Rect2(0, 0, 72, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb22b"]
atlas = ExtResource("2_c8smu")
region = Rect2(0, 0, 72, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_38a5l"]
atlas = ExtResource("3_dionp")
region = Rect2(0, 0, 72, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2cje"]
atlas = ExtResource("4_qmw5a")
region = Rect2(0, 0, 72, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_mlxkc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mssf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb22b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38a5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2cje")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"none",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npw1e"]
size = Vector2(36, 122)

[node name="Spikes" type="Area2D"]
script = ExtResource("1_c8smu")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_mlxkc")
animation = &"attack"
frame_progress = 0.52565145

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_npw1e")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
